<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyNanodegreeApps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/spotify"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/firstapp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:layout_marginBottom="10dp"
         />

    <Button
        android:id="@+id/score"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/secondapp"
        android:layout_below="@+id/spotify"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/library"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/thirdapp"
        android:layout_below="@+id/score"
        android:layout_alignLeft="@+id/score"
        android:layout_alignStart="@+id/score"
        android:background="@color/orange"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buildidbigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/fourthapp"
        android:layout_below="@+id/library"
        android:layout_alignLeft="@+id/library"
        android:layout_alignStart="@+id/library"
        android:background="@color/orange"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/xyzreader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/fifthapp"
        android:layout_below="@+id/buildidbigger"
        android:layout_alignRight="@+id/buildidbigger"
        android:layout_alignEnd="@+id/buildidbigger"
        android:background="@color/orange"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sixthapp"
        android:layout_below="@+id/xyzreader"
        android:layout_alignLeft="@+id/xyzreader"
        android:layout_alignStart="@+id/xyzreader"
        android:background="@color/colorAccent"/>

</RelativeLayout>
